// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`personActions creates GET_PERSON when it is called successfully 1`] = `
Array [
  Object {
    "type": "GET_PERSONS",
  },
  Object {
    "type": "GET_PERSON",
  },
]
`;

exports[`personActions creates GET_PERSONS when it is called successfully 1`] = `
Array [
  Object {
    "type": "GET_PERSONS",
  },
]
`;
